--- a/lesson07 2/css/bootstrap-4.4.1.css
+++ b/lesson07 2/css/bootstrap-4.4.1.css
@@ -367,7 +367,9 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2rem;
+    font-size: 2rem;
+    font-family: Oswald;
+    text-align: center;
 }
 
 h3, .h3 {
